# Toolbox

./: .pypirc  brouillontodo.txt  corbeille.txt  note.txt  pyproject.toml  toCheck.py
Python package/: Lineactua.drawio  Python CLI - create a python package for pip.docx
calibration/: calibration.py
hoda_calibration.egg-info/: PKG-INFO  SOURCES.txt
hoda_toolbox.egg-info/: PKG-INFO  SOURCES.txt
hoda_toolbox/visualization/: visualization.py
hodabox/: 3d_transformation.py  __init__.py  calibration.py  cypher.py  tag_detection.py  toolbox.py  transformation.py  visualization.py
hodabox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: tests_calibration.py
toolbox/classic/: maths.py
