[project]
name = "hoda-toolbox"
version = "0.1.3"
description = "Une courte description de votre projet"
authors = [{name = "Votre Nom", email = "votre@email.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/DamianLari/Toolbox.git"


[project.optional-dependencies]
test = ["pytest", "coverage"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["toolbox", "toolbox.classic", "toolbox.visualization", "toolbox.tag", "toolbox.niryo"]


